--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"prettier": "^3.3.2"
 	},
 	"dependencies": {
+		"@dotenvx/dotenvx": "^1.6.2",
 		"minimist": "^1.2.8",
 		"storyblok-js-client": "^6.7.3",
 		"zip-lib": "^1.0.4"
