--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "storyblok-backup",
 	"version": "0.0.4",
-	"description": "npx CLI tool to create a full backup of a Storyblok space",
+	"description": "npx CLI tool to create a full backup of a Storyblok space and restore single resources from it.",
 	"scripts": {
 		"upgrade": "npx npm-check-updates -i -u && pnpm install",
 		"lint:js": "eslint --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .lintignore .",
@@ -12,7 +12,8 @@
 		"lintfix": "pnpm lintfix:js && pnpm lintfix:prettier"
 	},
 	"bin": {
-		"storyblok-backup": "bin/storyblok-backup.mjs"
+		"storyblok-backup": "bin/storyblok-backup.mjs",
+		"storyblok-restore": "bin/storyblok-restore.mjs"
 	},
 	"repository": {
 		"type": "git",
